corrected the dob field clipping issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -162,7 +162,7 @@ h2.inner-pages{
 }
 #user-form .dob-input{
     float: left;
-    width: 25%;
+    width: 27%;
     max-width: 73px;
     margin-right: 15px;
 }
@@ -618,7 +618,7 @@ footer a:hover{
         width: 57%;
     }
     #user-form .dob-input{
-        width: 19%;
+        width: 22%;
     }
     #inputStreet{
         width: 63%;
@@ -655,7 +655,7 @@ footer a:hover{
         width: 60%;
     }
     #user-form .dob-input{
-        width: 16%;
+        width: 17%;
     }
     #inputStreet{
         width: 67%;
